@@ -1,3 +1,12 @@
+2013-01-16  Xavi Artigas  <xartigas@fluendo.com>
+
+	* src/gstttmlspan.c: (gst_ttml_span_new):
+	  - Remove ugly single space at beginning of spans caused by
+	    XML indentation. THIS DOES NOT FOLLOW THE SPEC, and might
+	    break some (strange) scenarios, but IMHO looks nicer and
+	    hides a bug we have when this single space appears before
+	    a <set> node.
+
 2013-01-15  Xavi Artigas  <xartigas@fluendo.com>
 
 	* src/gstttmlparse.c: (gst_ttmlparse_add_characters):
